# swagger_output.json
@@ -126,18 +126,26 @@
           "User"
         ],
         "description": "Atualiza um usuário",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "id",
-            "description": "User ID",
-            "in": "query",
-            "type": "string"
+            "in": "path",
+            "description": "User ID.",
+            "required": true,
+            "type": "integer"
           },
           {
-            "name": "user",
+            "name": "obj",
             "in": "body",
-            "description": "Informações do usuário",
+            "description": "User data.",
             "required": true,
+            "type": "string",
             "schema": {
               "type": "object",
               "properties": {
@@ -149,17 +157,17 @@
                   "type": "string",
                   "example": "nathy.alpino1@gmail.com"
                 },
-                "cpf": {
-                  "type": "string",
-                  "example": "000.000.000-000"
-                },
                 "oldPassword": {
                   "type": "string",
                   "example": "pass"
                 },
-                "birth_date": {
+                "cpf": {
                   "type": "string",
-                  "example": "2021-09-11"
+                  "example": "000.000.000-000"
+                },
+                "contact": {
+                  "type": "string",
+                  "example": ""
                 },
                 "postal_code": {
                   "type": "string",
@@ -168,10 +176,6 @@
                 "state": {
                   "type": "string",
                   "example": "SP"
-                },
-                "contact": {
-                  "type": "string",
-                  "example": ""
                 },
                 "city": {
                   "type": "string",
@@ -192,47 +196,12 @@
                 "complement": {
                   "type": "string",
                   "example": ""
-                },
-                "is_admin": {
-                  "type": "boolean",
-                  "example": false
                 }
-              },
-              "required": [
-                "email",
-                "oldPassword"
-              ]
+              }
             }
-          },
-          {
-            "name": "in",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "description",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "required",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "schema",
-            "in": "query",
-            "type": "string"
           }
         ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          }
-        }
+        "responses": {}
       }
     },
     "/user/{id}": {
@@ -290,89 +259,34 @@
     "/store": {
       "post": {
         "tags": [
-          "User"
+          "Store"
         ],
-        "description": "Cria um novo usuário",
+        "description": "Cria uma nova loja",
         "parameters": [
           {
-            "name": "user",
+            "name": "obj",
             "in": "body",
-            "description": "Informações do usuário",
-            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "name": {
-                  "type": "string",
-                  "example": "Natália Alpino"
-                },
-                "email": {
-                  "type": "string",
-                  "example": "nathy.alpino1@gmail.com"
-                },
-                "cpf": {
-                  "type": "string",
-                  "example": "000.000.000-000"
-                },
-                "password": {
-                  "type": "string",
-                  "example": "pass"
-                },
-                "birth_date": {
-                  "type": "string",
-                  "example": "2021-09-11"
-                },
-                "postal_code": {
-                  "type": "string",
-                  "example": "14403-075"
-                },
-                "state": {
-                  "type": "string",
-                  "example": "SP"
-                },
-                "contact": {
-                  "type": "string",
-                  "example": ""
-                },
-                "city": {
-                  "type": "string",
-                  "example": "Franca"
-                },
-                "district": {
-                  "type": "string",
-                  "example": "Street"
-                },
-                "number_house": {
-                  "type": "number",
-                  "example": 2390
-                },
-                "street": {
-                  "type": "string",
-                  "example": "José Marcelo Leite"
-                },
-                "complement": {
-                  "type": "string",
-                  "example": ""
-                },
-                "is_admin": {
-                  "type": "boolean",
-                  "example": false
+                  "example": "any"
                 }
               }
             }
           }
         ],
         "responses": {
-          "409": {
-            "description": "Conflict"
+          "401": {
+            "description": "Unauthorized"
           }
         }
       },
       "get": {
         "tags": [
-          "User"
+          "Store"
         ],
-        "description": "Lista os usuários",
+        "description": "Cria uma nova loja",
         "parameters": [],
         "responses": {
           "200": {
@@ -384,9 +298,9 @@
     "/store/{id}": {
       "get": {
         "tags": [
-          "User"
+          "Store"
         ],
-        "description": "Lista um usuário por Id",
+        "description": "Cria uma nova loja",
         "parameters": [
           {
             "name": "id",
@@ -399,52 +313,8 @@
           "200": {
             "description": "OK"
           },
-          "404": {
-            "description": "Not Found"
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "User"
-        ],
-        "description": "Lista um usuário por Id",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
-          }
-        }
-      },
-      "put": {
-        "tags": [
-          "User"
-        ],
-        "description": "Lista um usuário por Id",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
@@ -485,66 +355,6 @@
       }
     },
     "/catalog/{id}": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          }
-        }
-      }
-    },
-    "/inventory": {
-      "post": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "obj",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "catalog_id": {
-                  "example": "any"
-                },
-                "where": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      },
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/inventory/{id}": {
       "get": {
         "tags": [],
         "description": "",
